--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative">
-                    <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Psicóloga Merilyn" class="rounded-2xl shadow-xl w-full max-w-md floating">
+                    <img src="images/img0.png" alt="Psicóloga Merilyn" class="rounded-2xl shadow-xl w-full max-w-md floating">
                     <div class="absolute -bottom-6 -left-6 bg-white p-4 rounded-xl shadow-lg hidden md:block">
                         <div class="flex items-center">
                             <div class="bg-teal-100 p-3 rounded-full">
@@ -136,7 +136,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/3 mb-12 md:mb-0 flex justify-center">
                     <div class="relative">
-                        <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Merilyn Psicóloga" class="rounded-2xl shadow-lg w-full max-w-xs">
+                        <img src="images/img4.jpeg" alt="Merilyn Psicóloga" class="rounded-2xl shadow-lg w-full max-w-xs">
                         <div class="absolute -bottom-5 -right-5 bg-teal-500 text-white p-4 rounded-xl shadow-lg">
                             <p class="font-bold">Merilyn Silva</p>
                             <p class="text-sm">CRP: 00/00000</p>
